Refactor: Update locale instantiation in formatVnd methods and clean up unused code in Category model